Validate file names #8679